<?xml version="1.0"?>
<package format="2">
  <name>marshmello_bringup</name>
  <version>0.0.0</version>
  <description>The marshmello_bringup package</description>
  <maintainer email="brentyi@berkeley.edu">Brent Yi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
